# lu77U-MobileSec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request_new.md
.github/workflows/: publish.yml  python-package.yml  python-publish.yml  test.yml
APK Outputs/Flutter/: CyberSpace CTF (2024) - Login.apk  Hello World from Dart.apk
APK Outputs/Java/: Working XSS.apk  m0lecon Beginner (2025) - DroidCryptor.apk
APK Outputs/React Native/: HTB - Don't Overreact.apk  Hello World from React Native.apk
lu77U_MobileSec/: __init__.py  __main__.py  utils.py
lu77U_MobileSec/ai/: __init__.py  base_provider.py  claude_provider.py  custom_provider.py  gemini_provider.py  ollama_lifecycle.py  ollama_models.py  ollama_provider.py  openai_provider.py  provider_factory.py  registry.py  schema.py
lu77U_MobileSec/analyzers/: __init__.py  java_kotlin_analyzer.py
lu77U_MobileSec/analyzers/agent/: __init__.py  agent_loop.py  code_graph.py  skills_loader.py  tools.py
lu77U_MobileSec/cli/: __init__.py  main.py  parser.py
lu77U_MobileSec/config/: __init__.py  constants.py  credentials.py  paths.py  prompts.py  settings.py  user_settings.py
lu77U_MobileSec/core/: __init__.py  app.py
lu77U_MobileSec/decompiler/: __init__.py  java_kotlin_decompiler.py
lu77U_MobileSec/detection/: __init__.py  detector.py
lu77U_MobileSec/detection/extractors/: __init__.py  basic_info_extractor.py  logging_config.py  manifest_parser.py
lu77U_MobileSec/detection/results/: __init__.py  basic_info_results.py  detection_results.py  framework_results.py
lu77U_MobileSec/dynamic_analysis/: __init__.py  adb_manager.py  dynamic_analyzer.py  frida_manager.py  mitmproxy_manager.py  ui_automator.py  verifier.py  verify_tools.py  visual_checker.py
lu77U_MobileSec/framework_detector/: __init__.py  base_detector.py  cordova_detector.py  enhanced_detector.py  flutter_detector.py  hybrid_detector.py  java_detector.py  kony_detector.py  kotlin_detector.py  libgdx_detector.py  native_detector.py  react_native_detector.py  unity_detector.py  unreal_detector.py  xamarin_detector.py
lu77U_MobileSec/framework_detector/constants/: __init__.py  frameworks.py
lu77U_MobileSec/frontend/: index.html  jsconfig.json  package.json  tailwind.config.js  vite.config.js
lu77U_MobileSec/frontend/src/: App.jsx  api.js  index.css
lu77U_MobileSec/frontend/src/components/: Layout.jsx  ScanTable.jsx  UploadCard.jsx  VulnList.jsx  ui.jsx
lu77U_MobileSec/frontend/src/lib/: format.js  useScanStream.js
lu77U_MobileSec/frontend/src/pages/: Dashboard.jsx  ScanDetail.jsx  Scans.jsx  Settings.jsx
lu77U_MobileSec/path_handlers/: __init__.py  gui_path_handler.py  manual_path_handler.py  path_manager.py  path_processor.py
lu77U_MobileSec/report_generator/: __init__.py  comprehensive_html_builder.py  comprehensive_pdf_generator.py  comprehensive_report_builder.py  html_content_builder.py  json_exporter.py  path_utils.py  pdf_generation_engine.py  pdf_generator.py  pdf_styles.py  report_builder.py  report_renderer.py  syntax_highlight.py
lu77U_MobileSec/skills/: java_kotlin_security.md  manifest_review.md  network_security.md  offensive_android.md
lu77U_MobileSec/tools_checker/: __init__.py  analysis_checker.py  jadx_checker.py  ollama_checker.py
lu77U_MobileSec/ui/: __init__.py  banner.py  colors.py  menu.py
lu77U_MobileSec/utils/: __init__.py  cancellation.py  cvss.py  debug.py  display_utils.py  installer.py  output_manager.py  print_banner.py  response_parser.py  screen.py  string_utils.py  system.py  time_utils.py  validation_utils.py  verbose.py  windows_dependencies.py  xml_utils.py
lu77U_MobileSec/web/: __init__.py  app.py  events.py  jobs.py  serializers.py  server.py  store.py
lu77U_MobileSec/web/routes/: __init__.py  dynamic.py  scans.py  settings.py  system.py
lu77U_MobileSec/web/services/: __init__.py  analysis_service.py  settings_service.py
lu77U_MobileSec/web/static/: index.html
lu77u_mobilesec/: __init__.py  __main__.py
lu77u_mobilesec/ai/: __init__.py
lu77u_mobilesec/ai/processors/: __init__.py  batch_processor.py  fix_generator.py  response_parser.py  vulnerability_analyzer.py
lu77u_mobilesec/ai/providers/: __init__.py  base_provider.py  groq_provider.py  ollama_provider.py
lu77u_mobilesec/cli/: __init__.py  app.py  arguments.py  commands.py  interactive.py  interface.py
lu77u_mobilesec/constants/: __init__.py  file_patterns.py  frameworks.py  severity_levels.py  vulnerabilities.py
lu77u_mobilesec/core/: __init__.py  orchestrator.py
lu77u_mobilesec/core/analyzers/: __init__.py  flutter_analyzer.py  java_kotlin_analyzer.py  mobsf_analyzer.py  mobsf_analyzer_clean.py  react_native_analyzer.py
lu77u_mobilesec/core/detectors/: __init__.py  framework_detector.py
lu77u_mobilesec/core/vulnerability/: __init__.py  patterns.py  reporting.py  scanner.py  severity.py
lu77u_mobilesec/system/: __init__.py
lu77u_mobilesec/system/doctor/: __init__.py  main_doctor.py
lu77u_mobilesec/system/validators/: __init__.py  detailed_checker.py  path_checker.py  tool_checker.py  version_checker.py
lu77u_mobilesec/tools/: __init__.py
lu77u_mobilesec/tools/android_tools/: __init__.py  avd_installer.py  manifest_parser.py
lu77u_mobilesec/tools/decompilers/: __init__.py  blutter_wrapper.py  jadx_wrapper.py  react_native_decompiler.py
lu77u_mobilesec/tools/mobsf_scripts/: __init__.py  mobsf_api.py
lu77u_mobilesec/utils/: __init__.py
lu77u_mobilesec/utils/config/: __init__.py  api_keys.py  manager.py
lu77u_mobilesec/utils/file_system/: __init__.py  manager.py  output_organizer.py
lu77u_mobilesec/utils/helpers/: __init__.py  string_utils.py  time_utils.py  validation.py
tests/: __init__.py  test_basic.py
