[metadata]
name = lu77U-MobileSec
version = attr: lu77u_mobilesec.__version__
description = Professional mobile security analysis and vulnerability patching tool for Android applications with AI-powered detection and automated fix generation
long_description = file: README.md
long_description_content_type = text/markdown
author = Sam MG Harish (lu77_u)
author_email = sammgharish@gmail.com
license = Apache-2.0
license_file = LICENSE
home_page = https://github.com/sam-mg/lu77U-MobileSec
project_urls =
    Bug Tracker = https://github.com/sam-mg/lu77U-MobileSec/issues
    Documentation = https://github.com/sam-mg/lu77U-MobileSec/wiki
    Source Code = https://github.com/sam-mg/lu77U-MobileSec
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Security
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Environment :: Console

[options]
packages = find:
python_requires = >=3.13
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    lu77u-mobilesec = lu77u_mobilesec.cli.app:run

[options.extras_require]
dev =
    pytest>=6.0
    pytest-asyncio>=0.18.0
    black>=22.0
    flake8>=4.0
    mypy>=0.950
analysis =
    beautifulsoup4>=4.9.0
    lxml>=4.6.0
    python-magic>=0.4.24
full =
    beautifulsoup4>=4.9.0
    lxml>=4.6.0
    python-magic>=0.4.24
    pytest>=6.0
    pytest-asyncio>=0.18.0
    black>=22.0
    flake8>=4.0
    mypy>=0.950

[bdist_wheel]
universal = 0
